Cleanup promoted page templates.

--- a/r2/r2/templates/promoteinventory.html
+++ b/r2/r2/templates/promoteinventory.html
@@ -24,7 +24,7 @@
    from r2.lib import js
 %>
 
-<%namespace name="pr" file="promotelinkform.html" />
+<%namespace name="pr" file="promotelinkbase.html" />
 <%namespace file="utils.html" import="plain_link, error_field" />
 
 ${unsafe(js.use('sponsored'))}
