--- a/r2/r2/templates/promotereport.html
+++ b/r2/r2/templates/promotereport.html
@@ -26,7 +26,7 @@
    from r2.lib.template_helpers import format_number
 %>
 
-<%namespace name="pr" file="promotelinkform.html" />
+<%namespace name="pr" file="promotelinkbase.html" />
 <%namespace file="utils.html" import="plain_link" />
 
 ${unsafe(js.use('sponsored'))}
