--- a/r2/r2/templates/roadblocks.html
+++ b/r2/r2/templates/roadblocks.html
@@ -26,7 +26,7 @@
   from r2.lib import js
  %>
 <%namespace name="utils" file="utils.html"/>
-<%namespace file="promotelinkform.html" name="p" />
+<%namespace file="promotelinkbase.html" name="p" />
 <%namespace file="utils.html" 
             import="error_field, checkbox, image_upload" />
 
