--- a/r2/r2/templates/profilebar.html
+++ b/r2/r2/templates/profilebar.html
@@ -28,7 +28,24 @@
 <%namespace file="printablebuttons.html" import="toggle_button"/>
 
 <div class="titlebox">
-  <h1>${thing.user.name}</h1>
+  <h1>
+    ${thing.user.name}
+
+    %if c.user_is_admin:
+      <span class="account-notes">
+        #${thing.user._id}
+
+        %if thing.user._deleted:
+          <span class="unusual">(deleted)</span>
+        %endif
+
+        %if thing.user._spam or thing.user._banned:
+          <span class="unusual">(banned)</span>
+        %endif
+      </span>
+    %endif
+
+  </h1>
 
   %if c.user != thing.user:
     <div>
