Remove obsolete feedback/ad_inq code

--- a/r2/r2/templates/prefdelete.html
+++ b/r2/r2/templates/prefdelete.html
@@ -35,7 +35,7 @@
   <%utils:round_field title="${_('sorry to see you go!')}">
     <div class="rounded white-field">
       ${unsafe(safemarkdown(_(
-        " * if you're having a problem on reddit, please consider [contacting us](/feedback) about it before deleting your account.\n"
+        " * if you're having a problem on reddit, please consider [contacting us](/message/compose?to=%2Fr%2Freddit.com) about it before deleting your account.\n"
         " * deleting your account will not delete the content of posts and comments you've made on reddit. to do so, please delete them individually."
       )))}
     </div>
