Use separate CPM for collection targeting.

--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -319,7 +319,8 @@
                   data-min_bid="${thing.min_bid}"
                   data-base_cpm="${thing.author.cpm_selfserve_pennies}"
                   data-geotarget_country_cpm="${g.cpm_selfserve_geotarget_country.pennies}"
-                  data-geotarget_metro_cpm="${g.cpm_selfserve_geotarget_metro.pennies}"/>
+                  data-geotarget_metro_cpm="${g.cpm_selfserve_geotarget_metro.pennies}"
+                  data-collection_cpm="${g.cpm_selfserve_collection.pennies}"/>
           <div class="minimum-spend">
             ${_('%(minimum)s minimum') % dict(minimum=format_currency(thing.min_bid, 'USD', locale=c.locale))}
           </div>
