Make collection UI available only to sponsors.

--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -359,7 +359,8 @@
                onclick="r.sponsored.collection_targeting()"
                checked="checked">
         <div class="label-group">
-          <span class="label">${_("collection")}</span>
+
+          <span class="label">${_("collection" if c.user_is_sponsor else "frontpage")}</span>
           <small class="label">${_("targets a collection of similar subreddits")}</small>
         </div>
       </label>
@@ -374,7 +375,7 @@
       </label>
     </div>
     <div class="target-group group">
-      <div class="collection-targeting">
+      <div class="collection-targeting" style="${'display:none' if not c.user_is_sponsor else ''}">
         <span class="label">${_("collection")}</span>
         <div class="collection-selector uninitialized">
           <div class="widget-container">
