Fix server-side jquery actions failing.

--- a/r2/r2/templates/promotelinkedit.html
+++ b/r2/r2/templates/promotelinkedit.html
@@ -101,6 +101,7 @@ ${pr.javascript_setup()}
       <footer class="buttons">
         <input type="hidden" name="campaign_id36" value="">
         <input type="hidden" name="campaign_name" value="">
+        <input type="hidden" name="id" value="#campaign">
         <span class="status error"></span>
         <button name="cancel"
                 onclick="return cancel_edit_campaign()">
