Properly display COLLECTION_NOEXIST error.

--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -386,6 +386,7 @@
         <div class="collection-subreddit-list">
           <div class="label"></div>
           <ul></ul>
+          ${error_field("COLLECTION_NOEXIST", "collection", "div")}
         </div>
       </div>
       <div class="subreddit-targeting" style="display:none">
