--- a/r2/r2/templates/redditheader.html
+++ b/r2/r2/templates/redditheader.html
@@ -22,7 +22,7 @@
 
 <%!
    from pylons import request
-   from r2.lib.template_helpers import add_sr, header_url
+   from r2.lib.template_helpers import add_sr, display_link_karma, header_url
    from r2.models import Sub, FakeSubreddit
    from r2.models.subreddit import DefaultSR
    from r2.lib.pages import SearchForm
@@ -78,7 +78,7 @@
     %else:
       <span class="user">
          ${plain_link(c.user.name, "/user/%s/" % c.user.name, _sr_path=False)}
-         &nbsp;(<span class="userkarma" title="${_("link karma")}">${c.user.safe_karma}</span>)
+         &nbsp;(<span class="userkarma" title="${_("link karma")}">${display_link_karma(c.user.link_karma)}</span>)
       </span>
 
       ${separator("|")}
