--- a/r2/r2/templates/usertableitem.html
+++ b/r2/r2/templates/usertableitem.html
@@ -20,6 +20,9 @@
 ## reddit Inc. All Rights Reserved.
 ###############################################################################
 
+<%!
+  from r2.lib.template_helpers import display_link_karma
+%>
 <%namespace file="printablebuttons.html" import="ynbutton" />
 <%namespace file="utils.html" import="plain_link, timestamp"/>
 
@@ -36,7 +39,7 @@
       <span class="user">
          ${plain_link(thing.user.name, "/user/%s/" % thing.user.name,
                       _sr_path=False)}
-         &nbsp;(<b>${thing.user.safe_karma}</b>)
+         &nbsp;(<b>${display_link_karma(thing.user.link_karma)}</b>)
       </span>
       &nbsp;
   %elif c.user_is_loggedin and cell_type == "sendmessage" and c.user != thing.user:
