--- a/r2/r2/templates/spotlightlisting.html
+++ b/r2/r2/templates/spotlightlisting.html
@@ -68,7 +68,7 @@
         <p>
           ${text_with_links(
             _("Use of this tool is open to all members of reddit.com, and for as little as %(price)s you can advertise in this area. %%(get_started)s") % dict(price=format_currency(g.min_promote_bid, 'USD', locale=c.locale)),
-              get_started=dict(link_text=unsafe(_("Get started &rsaquo;")), path="/ad_inq")
+              get_started=dict(link_text=unsafe(_("Get started &rsaquo;")), path="/advertising")
           )}
         </p>
       </div>
