Allow updated UI on pages other than promoted/edit_promo.

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -5837,7 +5837,7 @@ div #campaign-field {
     }
 }
 
-.campaign {
+.sponsored-page {
     .checkbox-group,
     .radio-group,
     .form-group,
@@ -5914,6 +5914,10 @@ div #campaign-field {
 }
 
 .create-promotion {
+    
+}
+
+.sponsored-page {
     @bg-color: lighten(#cee3f8, 5%);
     width: 800px;
     margin: auto;
