--- a/r2/r2/templates/promotelinkedit.html
+++ b/r2/r2/templates/promotelinkedit.html
@@ -31,7 +31,7 @@
 
 ${unsafe(js.use('sponsored'))}
 
-<div class="create-promotion">
+<div class="create-promotion sponsored-page">
   <div class="dashboard creative-dashboard">
     <header>
       <h2>${_("creative dashboard")}</h2>
