--- a/r2/r2/templates/promotelinknew.html
+++ b/r2/r2/templates/promotelinknew.html
@@ -25,7 +25,7 @@
 <%namespace name="utils" file="utils.html"/>
 
 
-<div class="create-promotion">
+<div class="create-promotion sponsored-page">
   <div class="dashboard">
     <header>
       <h2>new promotion</h2>
