Inbox counts: Add dark unread counts badge, start writing to inbox_count

--- a/r2/r2/public/static/css/reddit.less
+++ b/r2/r2/public/static/css/reddit.less
@@ -315,6 +315,16 @@ ul.flat-vert {text-align: left;}
 #mail.nohavemail {
     background-image: url(../mailgray.png);  /* SPRITE */
 }
+.message-count {
+  background-color: #FF7500;
+  color: #FFF;
+  font-size: 8px;
+  font-weight: bold;
+  padding: 0px 3px;
+  margin-left: 3px;
+  border-radius: 2px;
+  display: inline-block;
+}
 #modmail {
     position: relative;
     top: -2px;
