--- a/r2/r2/templates/promotelinkbase.html
+++ b/r2/r2/templates/promotelinkbase.html
@@ -375,7 +375,7 @@
       </label>
     </div>
     <div class="target-group group">
-      <div class="collection-targeting" style="${'display:none' if not c.user_is_sponsor else ''}">
+      <div class="collection-targeting">
         <span class="label">${_("interest audience group")}</span>
         <div class="collection-selector uninitialized">
           <div class="widget-container">
